--- a/todo task/style.css
+++ b/todo task/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background: linear-gradient(135deg, #5853fc, #fa38a3);
+  background: linear-gradient(135deg, #43ddd0, #3886fa);
   display: flex;
   justify-content: center;
   align-items: center;
